# mt4g

./: .gitignore  .gitmodules  CMakeLists.txt  L2DataCache.cuh  MainMemory.cuh  Makefile  README.md  ReadOnlyCache.cuh  TextureCache.cuh  binarySearch.h  capture.cu  constL1_lat.cuh  cudaDeviceProperties.cuh  l1.cuh  l1_lat.cuh  makefile  nvmlTester.cu  ro.cuh  shared_mem_lat.cuh
LineSize/: l2_linesize.cuh
ShareChk/: chkConstShareL1Data.cuh  chkTwoL1.cuh
docs/: development.md  usage.md
include/: config.hpp  version.hpp.in
include/benchmarks/: base.hpp  benchmark.hpp
include/const/: chartScript.hpp  constArray16384.hpp
include/typedef/: cacheBandwidthResult.hpp  cacheLatencyResult.hpp  cacheLineSizeResult.hpp  cacheSizeResult.hpp  cliOptions.hpp  disjointSet.hpp  enums.hpp  launcherFn.hpp  threadPool.hpp  vectorTypes.hpp
include/utils/: binarySearch.hpp  errorHandling.hpp  heuristic.hpp  kolmogorovSmirnov.hpp  meta.hpp  printing.hpp  runner.hpp  silent.hpp  statistics.hpp  tools.hpp  translation.hpp  util.hpp
sampleResults/: ampere.csv  pascal.csv  turing.csv  volta.csv
sampleResults/previous-nvidia-only/: volta.csv
sample_results/: AMD Instinct MI100.json  AMD Instinct MI210.json  AMD Instinct MI300A.json  AMD Instinct MI300X VF.json  NVIDIA A100-PCIE-40GB.json  NVIDIA GeForce RTX 2080 Ti.json  NVIDIA H100 80GB HBM3.json  NVIDIA H100 NVL.json  NVIDIA T1000.json  Quadro P6000.json  Tesla V100-PCIE-16GB.json
sample_results/AMD Instinct MI100/: AMD Instinct MI100 - L1 Fetch Granularity.txt  AMD Instinct MI100 - L1 Latency.txt  AMD Instinct MI100 - L1 Line Size.txt  AMD Instinct MI100 - L1 Size.txt  AMD Instinct MI100 - L2 Fetch Granularity.txt  AMD Instinct MI100 - L2 Latency.txt  AMD Instinct MI100 - Main Memory Latency.txt  AMD Instinct MI100 - Scalar L1 Fetch Granularity.txt  AMD Instinct MI100 - Scalar L1 Latency.txt  AMD Instinct MI100 - Scalar L1 Line Size.txt  AMD Instinct MI100 - Scalar L1 Size.txt  AMD Instinct MI100 - Shared Memory Latency.txt  README.md
sample_results/AMD Instinct MI210/: AMD Instinct MI210 - L1 Fetch Granularity.txt  AMD Instinct MI210 - L1 Latency.txt  (+11 more)
src/: CMakeLists.txt  ConstantCache.cuh  ConstantCache.h  ErrorHandler.h  GPU_resources.cuh  GPU_resources.h  L1DataCache.cuh  L1DataCache.h  L2DataCache.cuh  L2DataCache.h  MainMemory.h  Makefile  ReadOnlyCache.h  SharedMemory.cuh  SharedMemory.h  TextureCache.h  bandwidth.h  binarySearch.h  c1_linesize.cuh  capture.cpp  capture.cu  const15Latency.cuh  const15Latency.h  const1Numbers.cuh  const1Numbers.h  constCache2.cuh  constCache2.h  constL1_lat.h  cudaDeviceProperties.cuh  cudaDeviceProperties.h  eval.h  general_functions.h  l1.cuh  l1.h  l1LatTest.cuh  l1_l2_diff.cuh  l1_l2_diff.h  l1_latency_size.h  l2LatTest.cuh  l2_lat.cuh  (+16 more)
src/LineSize/: c15_linesize.cuh  l2_linesize.cuh  l2_linesize.h
src/ShareChk/: chkAllConst.cuh  chkAllConst.h  chkAllCore.cuh  chkAllCore.h  chkAllL1.cuh  chkAllL1.h  chkAllRO.cuh  chkAllRO.h  chkAllTexture.cuh  chkAllTexture.h  chkConstShareL1Data.cuh  chkConstShareL1Data.h  chkL1ShareTexture.cuh  chkL1ShareTexture.h  chkROShareL1Data.cuh  chkROShareL1Data.h  chkROShareTexture.cuh  chkROShareTexture.h  chkTwoC1.cuh  chkTwoC1.h  chkTwoL1.cuh  chkTwoL1.h  chkTwoRO.cuh  chkTwoRO.h  chkTwoTexture.cuh  chkTwoTexture.h
src/benchmarks/amd/amount/: scalarL1Amount.cpp
src/benchmarks/amd/bandwidth/: l1ReadBandwidthBlocksweep.cpp  l1WriteBandwidthBlocksweep.cpp  l3ReadBandwidth.cpp  l3WriteBandwidth.cpp  sL1ReadBandwidth.cpp  sL1WriteBandwidth.cpp
src/benchmarks/amd/latency/: l3Latency.cpp  scalarL1Latency.cpp
src/benchmarks/amd/missPenalty/: l3MissPenalty.cpp  scalarL1MissPenalty.cpp
src/benchmarks/amd/share/: cuShareScalarL1.cpp  cuShareScalarL1logicalIds.cpp
src/benchmarks/amd/size/cacheSize/: scalarL1CacheSize.cpp
src/benchmarks/amd/size/fetchGranularity/: l3FetchGranularity.cpp  scalarL1FetchGranularity.cpp
src/benchmarks/amd/size/lineSize/: scalarL1LineSize.cpp
src/benchmarks/nvidia/amount/: constantL1Amount.cpp  readOnlyAmount.cpp  textureAmount.cpp
src/benchmarks/nvidia/difference/: differenceL1L2.cpp
src/benchmarks/nvidia/latency/: constantL15Latency.cpp  constantL1Latency.cpp  readOnlyLatency.cpp  textureLatency.cpp
src/benchmarks/nvidia/missPenalty/: constantL1MissPenalty.cpp  readOnlyMissPenalty.cpp  textureMissPenalty.cpp
src/benchmarks/nvidia/share/: constantL1SharedWithL1.cpp  readOnlySharedWithL1.cpp  smShareConstantL15.cpp  textureSharedWithL1.cpp  textureSharedWithReadOnly.cpp
src/benchmarks/nvidia/size/cacheSize/: constantL15CacheSize.cpp  constantL1CacheSize.cpp  readOnlyCacheSize.cpp  textureCacheSize.cpp
src/benchmarks/nvidia/size/fetchGranularity/: constantL15FetchGranularity.cpp  constantL1FetchGranularity.cpp  readOnlyFetchGranularity.cpp  textureFetchGranularity.cpp
src/benchmarks/nvidia/size/lineSize/: constantL15LineSize.cpp  constantL1LineSize.cpp  readOnlyLineSize.cpp  textureLineSize.cpp
src/benchmarks/shared/amount/: l1Amount.cpp
src/benchmarks/shared/bandwidth/: l1ReadBandwidth.cpp  l1WriteBandwidth.cpp  l2ReadBandwidth.cpp  l2WriteBandwidth.cpp  mainMemoryReadBandwidth.cpp  mainMemoryWriteBandwidth.cpp  sharedReadBandwidth.cpp  sharedReadBandwidthStatic.cpp  sharedWriteBandwidth.cpp  sharedWriteBandwidthStatic.cpp
src/benchmarks/shared/departureDelay/: departureDelay.cpp
src/benchmarks/shared/latency/: l1Latency.cpp  l2Latency.cpp  mainMemoryLatency.cpp  sharedLatency.cpp
src/benchmarks/shared/missPenalty/: l1MissPenalty.cpp  l2MissPenalty.cpp
src/benchmarks/shared/size/cacheSize/: l1CacheSize.cpp  l2SegmentSize.cpp
src/benchmarks/shared/size/fetchGranularity/: l1FetchGranularity.cpp  l2FetchGranularity.cpp
src/benchmarks/shared/size/lineSize/: l1LineSize.cpp  l2LineSize.cpp
src/starter_other/: ConstMemory.cpp  ConstMemory.cu  const15MemTest_sep.cuh  const15MemTest_sep.h  constL1_5_lat_sep.cuh  constL1_5_lat_sep.h
src/typedef/: disjointSet.cpp  threadPool.cpp
src/utils/: binarySearch.cpp  heuristic.cpp  printing.cpp  runner.cpp  statistics.cpp  tools.cpp  translation.cpp
(+253 files in other folders)
